--- a/main.html
+++ b/main.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project 3</title>
     <script type="module" src="./main.js"></script>
+    <link rel="stylesheet" href="./main.css" />
   </head>
   <body>
     <h1>Project 3</h1>
+    <div id="plot"></div>
   </body>
 </html>
