--- a/index.html
+++ b/index.html
@@ -3,40 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Project 3 Visualizations in D3</title>
-    <link rel="stylesheet" href="./style.css" />
-    <script src="https://d3js.org/d3.v7.min.js" type="module"></script>
-    <script type="module" src="./plot1.js"></script>
-    <script type="module" src="./plot2.js"></script>
-    <script type="module" src="./plot3.js"></script>
-    <script type="module" src="./plot4.js"></script>
-    <script type="module" src="./plot5.js"></script>
-
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
+    <title>Project 3</title>
+    <script type="module" src="./main.js"></script>
+    <link rel="stylesheet" href="./main.css" />
   </head>
   <body>
-    <!-- chart1 will be for plot1 -->
-    <div id="chart1"></div>
-    <br />
-    <br />
-    <!-- chart2 will be for plot2 -->
-    <div id="chart2"></div>
-    <br />
-    <br />
-    <!-- chart3 will be for plot3 -->
-    <div id="chart3"></div>
-    <br />
-    <br />
-    <!-- chart4 will be for plot4 -->
-    <div id="chart4"></div>
-    <br />
-    <br />
-    <!-- chart5 will be for plot5 -->
-    <div id="chart5"></div>
-    <br />
-    <br />
+    <h1>Project 3</h1>
+    <div id="plot"></div>
+    <div id="tooltip"></div>
   </body>
 </html>
