--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Project 3</title>
+    <title>Project 3: Interactive Visualization</title>
     <script type="module" src="./main.js"></script>
     <link rel="stylesheet" href="./main.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <h1>Project 3</h1>
+    <h2>Project 3: Interactive Visualization</h2>
     <div id="plot"></div>
     <div id="tooltip"></div>
+    <h5>By: Ritvik Mohindru, Brooklyn Pagaza, Sai Sri Lasya Yadlapati</h5>
   </body>
 </html>
