added smaller plot and reorganized files

--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
   </head>
   <body>
     <h2>Project 3: Interactive Visualization</h2>
-    <div id="plot"></div>
+    <div id="plot-container">
+      <div id="plot"></div>
+      <div id="small-plot"></div>
+    </div>
     <div id="tooltip"></div>
-    <h5>By: Ritvik Mohindru, Brooklyn Pagaza, Sai Sri Lasya Yadlapati</h5>
+    <footer>
+      <h5>By: Ritvik Mohindru, Brooklyn Pagaza, Sai Sri Lasya Yadlapati</h5>
+    </footer>
   </body>
 </html>
