--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
     <h2>Project 3: Interactive Visualization</h2>
     <div id="plot-container">
       <div id="plot"></div>
-      <div id="small-plot"></div>
+      <div id="small-plot">
+        <svg id="small-plot-svg"></svg>
+        <input id="slider" type="range" min="1" max="14" value="0" step="0.1" />
+        <p>Day <output id="day-num"></output></p>
+      </div>
     </div>
     <div id="tooltip"></div>
     <footer>
