--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     />
   </head>
   <body>
-    <h2>Project 3: Interactive Visualization</h2>
+    <h2>Exploring Gender Differences in Mice Activity Levels</h2>
     <div id="plot-container">
       <div id="plot"></div>
       <div id="small-plot">
+        <svg id="description-box"></svg>
         <svg id="small-plot-svg"></svg>
         <input id="slider" type="range" min="1" max="14" value="0" step="0.1" />
         <p>Day <output id="day-num"></output></p>
