edited description box

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
   </head>
   <body>
-    <h2>Exploring Gender Differences in Mice Activity Levels</h2>
+    <h2>The Impact of Gender on Mouse Activity Levels</h2>
     <div id="plot-container">
       <div id="plot"></div>
       <div id="small-plot">
